@startuml
'https://plantuml.com/class-diagram

interface ScoreDao{
    + getScores(int difficulty):List<ScoreData>
    + getAllScores():void
    + printScoreDatas():void
    + sortByScore():void
    + doAdd(ScoreData scoredata):void
    + doDelete((ScoreData scoredata):void

}
class  ScoreDaoImpByFile{

    - fileName:String
    - allScoreDatas:List<ScoreData>

    + ScoreDaoImpByFile(String fileName)
    + getScores(int difficulty):List<ScoreData>
    + getAllScores():void
    + printScoreDatas():void
    + sortByScore():void
    + doAdd(ScoreData scoredata):void
    + doDelete((ScoreData scoredata):void

}
class ScoreData{
    - difficulty:int
    - name:String
    - score:int
    - date:String
    + ScoreData(int difficult, int score, String name, String date)
    + setDifficulty(int difficulty):void
    + setName(String name):void
    + setScore(int score):void
    + setDate(String date):void
    + getDifficulty():int
    + getName():String
    + getScore():int
    + getDate():String

}

ScoreDaoImpByFile ..|> ScoreDao

ScoreDaoImpByFile --> ScoreData

@enduml